[tool.poetry]
name = "lol_api"
version = "0.1.0"
description = "Machine learning based champion pick recommendation system"
authors = ["Jaime Collado"]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"
requests = "^2.27.1"
pandas = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
